# call_gate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  run_checks.sh  run_coverage.sh  run_tox.sh  setup.py  tox.ini
.github/workflows/: publish.yaml  workflow.yml
call_gate/: __init__.py  call_gate.py  errors.py  gate.py  sugar.py  typings.py
call_gate/storages/: base_storage.py  redis.py  shared.py  simple.py
examples/: basic_usage.py  context_manager.py  decorator.py
examples/storage_types/: docker-compose.examples.yml  redis_cluster.py  redis_sentinel.py  redis_sentinel_antipattern.py  redis_standalone.py  shared.py  simple.py
examples/web_frameworks/fastapi_uvicorn/: client.py  fastapi_server.py  requirements.txt
examples/web_frameworks/flask_gunicorn/: client.py  flask_server.py  requirements.txt
sliding_window/: __init__.py  errors.py  typings.py  window.py
sliding_window/base/: base_storage.py
sliding_window/storages/: base_storage.py  redis.py  shared.py  simple.py
tests/: conftest.py  parameters.py  test_asgi_wsgi.py  test_asyncio.py  test_call_gate.py  test_callgate_edge_cases.py  test_gate_retry_and_logging.py  test_multi_processing.py  test_multi_threading.py  test_multiprocess.py  test_redis_cluster.py  test_redis_distributed_refresh.py  test_redis_edge_cases.py  test_redis_specific.py  test_sliding_window.py  test_storage_edge_cases.py  test_sugar.py  test_timestamp_persistence.py
tests/asgi_wsgi/: asgi_app.py  wsgi_app.py
tests/cluster/: utils.py
